--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <title>WebRtcFireSsr</title>
   <base href="/">
+	<meta name="Description" content="Communication and Video application.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
+	<link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png">
   <meta name="theme-color" content="#1976d2">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
